--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,27 @@
 .app {
   width: 100vw;
-  height: 100vh;
+  height: fit-content;
+  display: flex;
+  flex-direction: row;
+}
+
+@media only screen and (max-width: 1250px) {
+  .app {
+    flex-direction: row;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .app {
+    flex-direction: column-reverse;
+  }
+  /* .header {
+    flex: 1;
+  }
+  .ig {
+    flex: 2;
+  }
+  .sidebar {
+    flex: 3;
+  } */
 }
