--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .app {
   width: 100vw;
-  height: fit-content;
+  height: 100vh;
   display: flex;
   flex-direction: row;
 }
@@ -14,6 +14,9 @@
 @media only screen and (max-width: 750px) {
   .app {
     flex-direction: column-reverse;
+  }
+  .two {
+    height: 95%;
   }
   /* .header {
     flex: 1;
