--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -43,10 +43,8 @@
 
 @media only screen and (max-width: 750px) {
   .sidebar {
-    position: absolute;
-    bottom: 0;
     flex-direction: row;
-    height: fit-content;
+    height: 5%;
     justify-content: space-evenly;
     width: 100%;
     /* margin-top: 20px; */
