--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
   display: flex;
   flex-direction: row;
 }
+.two {
+  width: 100%;
+}
 
 @media only screen and (max-width: 1250px) {
   .app {
@@ -18,13 +21,4 @@
   .two {
     height: 95%;
   }
-  /* .header {
-    flex: 1;
-  }
-  .ig {
-    flex: 2;
-  }
-  .sidebar {
-    flex: 3;
-  } */
 }
