--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@
 }
 .two {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 @media only screen and (max-width: 1250px) {
