--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,12 +1,14 @@
 .sidebar {
-  /* width: 20%; */
+  /* width: 25%; */
+  padding: 20px;
   width: fit-content;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   font-size: 20px;
-  color: black;
+  color: var(--color);
+  background-color: var(--bg);
 }
 
 .sidebar .icon {
