--- a/src/components/IG/IG.css
+++ b/src/components/IG/IG.css
@@ -3,13 +3,15 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  color: var(--color);
+  background-color: var(--bg);
 }
 
 .ig ul {
   display: flex;
   justify-content: space-evenly;
   width: 85%;
-  border-top: 1px solid black;
+  border-top: 1px solid var(--color);
   padding: 20px;
 }
 
@@ -29,6 +31,6 @@
 
 .ig a {
   display: flex;
-  color: black;
+  color: var(--color);
   text-decoration: none;
 }
